# highstake

./: .gitignore  CLAUDE.md  FEATURE_HUMAN_BEHAVIORAL_REALISM.md  PRD.md  PRD_v2_archive.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  progress.md  tailwind.config.js  vite.config.js
server/: .env.example  alembic.ini  generate_filler_audio.py  generate_moderator_audio.py  pyproject.toml  requirements.txt  test_path_logic.py
server/alembic/versions/: 001_initial_schema.py  002_add_claims_json_to_decks.py  003_add_debrief_exchange_columns.py
server/app/: config.py  main.py
server/app/agents/: README.md
server/app/agents/session-templates/analyst/: exchange-notes.md
server/app/agents/session-templates/moderator/: debrief-notes.md  session-state.md
server/app/agents/session-templates/shared/: exchange-history.md  presenter-transcript.md  session-config.md
server/app/api/: debrief.py  decks.py  sessions.py
server/app/models/: __init__.py  base.py  debrief.py  deck.py  session.py  transcript.py
server/app/schemas/: debrief.py  deck.py  session.py  transcript.py  websocket.py
server/app/services/: agent_engine.py  agent_prompts.py  agent_runner.py  claim_extractor.py  claude_client.py  coaching_generator.py  context_manager.py  deck_parser.py  event_bus.py  filler_service.py  live_transcription.py  llm_client.py  scoring_engine.py  session_context.py  session_finalizer.py  session_logger.py  session_store.py  storage_service.py  stt_service.py  template_loader.py  tts_service.py
server/app/ws/: events.py  handler.py
(+47 files in other folders)
